--- a/styles/login.css
+++ b/styles/login.css
@@ -10,7 +10,7 @@ body {
 
     #header{
         display:flex;
-        height: 30vh;
+        height: 15vh;
         justify-content: center;
         align-items: center;
         font-size: 28px;
@@ -24,15 +24,44 @@ body {
 
     #menu{
         display:flex;
-        height: 55vh;
+        height: 65vh;
         justify-content: center;
     }
 
-#button-container{
+#forms-container{
     display:inline-flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+}
+
+.forms-items{
+    display: flex;
+    justify-content: center;
+    align-items: center;   
+    margin: 6px;
+}
+
+input[type=text] {
+    color: #BC6FF1;
+}   
+
+input::placeholder{
+    color: #BC6FF1;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.forms-text-input{
+    width: 240px;
+    height: 80px;
+
+    background-color: #52057B;
+    color: #BC6FF1;
+
+    border: none;
+    border-radius: 16px;
+    text-align: center;
+    font-size: 32px;
 }
 
 .button {
@@ -57,11 +86,7 @@ body {
     transition: 0.3s ease;
 }
 
-#login-button{
-    font-family: 'Ubuntu', sans-serif;
-}
-
-#signup-button{
+#submit-button{
     font-family: 'Ubuntu', sans-serif;
 }
 
