--- a/styles/login.css
+++ b/styles/login.css
@@ -1,19 +1,29 @@
 /* justify-content este pentru stanga-dreapta si align-items estep entru sus-jos*/
 
+*{
+    margin:0px;
+    padding:0px;
+    border-radius: 0px;
+}
+
+
 a{
     text-decoration: none;
 }
 
 body {
     background-color: #000000;
+    display: flex;
+    flex-direction: column;
 }
 
     #header{
         display:flex;
-        height: 15vh;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         font-size: 28px;
+        height: 15vh;
     }
 
 #title {
@@ -23,22 +33,27 @@ body {
 }
 
     #menu{
-        display:flex;
         height: 65vh;
+        display:flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
     }
 
 #forms-container{
-    display:inline-flex;
+    display:flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    width: 500px;
+    max-width: 1000px;
 }
 
 .forms-items{
     display: flex;
-    justify-content: center;
-    align-items: center;   
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
     margin: 6px;
 }
 
