--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,19 +1,29 @@
 /* justify-content este pentru stanga-dreapta si align-items estep entru sus-jos*/
 
+*{
+    margin:0px;
+    padding:0px;
+    border-radius: 0px;
+}
+
+
 a{
     text-decoration: none;
 }
 
 body {
     background-color: #000000;
+    display: flex;
+    flex-direction: column;
 }
 
     #header{
         display:flex;
-        height: 30vh;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         font-size: 28px;
+        height: 15vh;
     }
 
 #title {
@@ -23,16 +33,50 @@ body {
 }
 
     #menu{
+        height: 65vh;
         display:flex;
-        height: 55vh;
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
     }
 
-#button-container{
-    display:inline-flex;
+#forms-container{
+    display:flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    width: 500px;
+    max-width: 1000px;
+}
+
+.forms-items{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    margin: 6px;
+}
+
+input[type=text] {
+    color: #BC6FF1;
+}   
+
+input::placeholder{
+    color: #BC6FF1;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.forms-text-input{
+    width: 240px;
+    height: 80px;
+
+    background-color: #52057B;
+    color: #BC6FF1;
+
+    border: none;
+    border-radius: 16px;
+    text-align: center;
+    font-size: 32px;
 }
 
 .button {
@@ -57,11 +101,7 @@ body {
     transition: 0.3s ease;
 }
 
-#login-button{
-    font-family: 'Ubuntu', sans-serif;
-}
-
-#signup-button{
+#submit-button{
     font-family: 'Ubuntu', sans-serif;
 }
 
